cabal-version:      2.4
name:               dp-framework
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             matonix
maintainer:         automatonix@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010

  --   ghc-options:      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wcompat
  build-depends:
    , array
    , base              ^>=4.14.1.0
    , template-haskell
    , vector
    , bytestring
    , massiv
    , repa

-- list of common dependencies

library
  import:           shared-properties
  exposed-modules:
    DPNkMA

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
  hs-source-dirs:   src
  default-language: Haskell2010

executable dp-framework
  import:           shared-properties
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    dp-framework
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite dp-framework-test
  import:           shared-properties
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
